--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
         </activity>
+
+        <service android:name=".UpdateDBService" />
     </application>
 
 </manifest>
