--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile files('src/main/resources/libs/jsoup-1.8.3.jar')
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'it.neokree:MaterialTabs:0.11'
 }
