--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,13 @@
             android:label="@string/app_name">
         </activity>
 
+
+    <!-- Main Activity (display menu) -->
+        <activity
+            android:name=".RefreshScreenActivity"
+            android:label="@string/app_name">
+        </activity>
+
         <service android:name=".UpdateDBService" />
     </application>
 
