Added credits page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zhou.allen.bruinmenu" >
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -8,34 +9,36 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
 
-    <!-- Connecting Screen -->
+        <!-- Connecting Screen -->
         <activity
-            android:label="@string/app_name"
             android:name=".LoadingScreenActivity"
+            android:label="@string/app_name"
             android:noHistory="true" >
-            <intent-filter >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-    <!-- Main Activity (display menu) -->
+        <!-- Main Activity (display menu) -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
         </activity>
 
-
-    <!-- Main Activity (display menu) -->
+        <!-- Main Activity (display menu) -->
         <activity
             android:name=".RefreshScreenActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
         </activity>
 
         <service android:name=".UpdateDBService" />
+
+        <activity android:name=".CreditsActivity" >
+        </activity>
     </application>
 
 </manifest>
