--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <!-- Main Activity (display menu) -->
         <activity
             android:name=".RefreshScreenActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:noHistory="true" >
         </activity>
 
         <service android:name=".UpdateDBService" />
