Opens nutritional data when user clicks on textview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
 
         <activity android:name=".CreditsActivity" >
         </activity>
+
+        <activity
+            android:name=".NutriDataWebView"
+            android:label="Nutritional Data"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
