Fixed refresh every time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,12 @@
             android:noHistory="true" >
         </activity>
 
-        <service android:name=".UpdateDBService" />
+        <service
+            android:name=".UpdateDBService" >
+            <intent-filter>
+                <action android:name="zhou.allen.bruinmenu.UPDATEDB" />
+            </intent-filter>
+        </service>
 
         <activity android:name=".CreditsActivity" >
         </activity>
